# tzncfg

./: ChangeLog  LICENSE  Makefile  Makefile.am  NEWS  README  README.md  TimeZone  UTC offset from TimeZone  antigen.sh  configure.ac  configure.scan  makefile.mk  settz.txt  test_tokenlist.sh  test_xobjconf.sh  timezone.conf  timezone.csv  timezone.nvram  timezones.csv  tmp  tokenlist.c  trim.c  tznconfig.c  xobjconf.c
conf/: How to setup timezone  NTP installation and configuration  country_codes.csv  timezone.nvram  timezones_conf_xml.txt
doc/: Date&Time.webarchive  LincMad's 2012 Area Code Map with Time Zones.webarchive  Timezones.webarchive  timezone.numbers  timezones.numbers
nvram/: Makefile.am  nvram-1.0.pc.in
nvram/host/: commit
nvram/include/: Makefile.am  bcmconfig.h  bcmnvram.h
nvram/src/: nvram_cavium.c  nvram_main.c
nvram/testcase/: Makefile.am  test.c
xutils/: Makefile.am  xutils-1.0.pc.in  xutils.c  xutils.h
